--- a/package.json
+++ b/package.json
@@ -21,19 +21,24 @@
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
+    "node-sass": "^3.8.0",
     "react-addons-test-utils": "^0.14.7",
-    "webpack": "^1.12.9",
+    "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "css-loader": "^0.24.0",
     "lodash": "^3.10.1",
+    "node-sass": "^3.8.0",
     "react": "^0.14.3",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
-    "shortid": "^2.2.6"
+    "sass-loader": "^4.0.0",
+    "shortid": "^2.2.6",
+    "style-loader": "^0.13.1"
   }
 }
