--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "node-sass": "^3.8.0",
-    "react-addons-test-utils": "^0.14.7",
+    "react-addons-test-utils": "^15.3.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.0"
   },
@@ -30,10 +30,12 @@
     "babel-preset-stage-1": "^6.1.18",
     "css-loader": "^0.24.0",
     "lodash": "^3.10.1",
+    "materialize-css": "^0.97.7",
     "node-sass": "^3.8.0",
-    "react": "^0.14.3",
+    "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
-    "react-dom": "^0.14.3",
+    "react-dom": "^15.3.1 ",
+    "react-materialize": "^0.15.2",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
