--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "redux-simple-starter",
+  "name": "freecodecamp_recipebox",
   "version": "1.0.0",
-  "description": "Simple starter package for Redux with React and Babel support",
+  "description": "FCC's Project Assignment",
   "main": "index.js",
-  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
+  "repository": "git@github.com:Neotriz/RecipeBox.git",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
